--- a/package.json
+++ b/package.json
@@ -1,21 +1,14 @@
 {
-  "name": "electron-quick-start",
+  "name": "nomadcoin-wallet",
   "version": "1.0.0",
-  "description": "A minimal Electron application",
+  "description": "Wallet Desktop App for the Nomadcoin blockchain",
   "main": "main.js",
   "scripts": {
-    "start": "electron ."
+    "start": "ENV=dev electron ."
   },
-  "repository": "https://github.com/electron/electron-quick-start",
-  "keywords": [
-    "Electron",
-    "quick",
-    "start",
-    "tutorial",
-    "demo"
-  ],
-  "author": "GitHub",
-  "license": "CC0-1.0",
+  "repository": "https://github.com/serranoarevalo/nomadcoin-wallet",
+  "author": "Nicolás Serrano Arévalo <itnico.las.me@gmail.com>",
+  "license": "MIT",
   "devDependencies": {
     "electron": "~1.8.2"
   }
