--- a/package.json
+++ b/package.json
@@ -12,5 +12,7 @@
   "devDependencies": {
     "electron": "~1.8.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "get-port": "^3.2.0"
+  }
 }
