--- a/ui/package.json
+++ b/ui/package.json
@@ -3,10 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
+    "electron": "^1.8.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-scripts": "1.1.1",
-    "styled-components": "^3.1.6"
+    "styled-components": "^3.1.6",
+    "styled-reset": "^1.1.2"
   },
   "homepage": "./",
   "scripts": {
