--- a/ui/package.json
+++ b/ui/package.json
@@ -5,11 +5,13 @@
   "dependencies": {
     "axios": "^0.18.0",
     "electron": "^1.8.2",
+    "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-scripts": "1.1.1",
     "styled-components": "^3.1.6",
-    "styled-reset": "^1.1.2"
+    "styled-reset": "^1.1.2",
+    "typography": "^0.16.6"
   },
   "homepage": "./",
   "scripts": {
