--- a/chain-node/package.json
+++ b/chain-node/package.json
@@ -3,6 +3,7 @@
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "crypto-js": "^3.1.9-1",
+    "dotjs": "^0.2.0",
     "elliptic": "^6.4.0",
     "express": "^4.16.2",
     "get-port": "^3.2.0",
