--- a/package.json
+++ b/package.json
@@ -5,14 +5,24 @@
   "main": "main.js",
   "productName": "Nomadcoin Wallet",
   "scripts": {
-    "start": "ENV=dev electron .",
-    "build": "electron-packager . --icon=coin.icns --prune=true --ignore=/ui --overwrite --out=dist",
-    "prebuild": "rm -rf wallet && cd ui && yarn build && cd .. && sips -z 512 512 coin.png && sips -s format icns coin.png --out coin.icns && rm -rf chain-node/src/privateKey"
+    "start":
+      "concurrently --kill-others \"yarn run startReact\" \"ENV=dev electron .\"",
+    "startReact": "cd ui && npm start",
+    "build":
+      "electron-packager . --icon=coin.icns --prune=true --ignore=/ui --overwrite --out=dist",
+    "prebuild":
+      "yarn run deleteWallet && yarn run buildWallet && yarn run createIcons && yarn run deletePrivateKey",
+    "deleteWallet": "rm -rf wallet",
+    "buildWallet": "cd ui && yarn build && cd ..",
+    "createIcons":
+      "rm coin.icns && sips -z 512 512 coin.png && sips -s format icns coin.png --out coin.icns",
+    "deletePrivateKey": "rm -rf chain-node/src/privateKey"
   },
   "repository": "https://github.com/serranoarevalo/nomadcoin-wallet",
   "author": "Nicolás Serrano Arévalo <itnico.las.me@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "concurrently": "^3.5.1",
     "electron": "^1.8.2"
   },
   "dependencies": {
